# vault-conductor

./: .cursorignore  .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  build.rs  cliff.toml  clippy.toml  codecov.yml  config.yaml.example  deny.toml  install.sh  justfile  matrix.jsonc  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json  setup.sh
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  enhancement.yml  feature_request.yml  security.yml
.github/workflows/: ci.yml  ci_cross.yml  coverage.yml  crates.yml  e2e_test.yml  licenses.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  CONFIG_LOAD.md  DATA_STRUCTURES.md  ERROR_HANDLING.md  FILE_SYSTEM.md  README.md  SERVICE.md
hooks/: commit-msg  pre-commit  pre-push
hooks_scripts/: fmt_staged.sh  pre-push-tag.sh
src/: BitwardenAgent.rs  BitwardenClientWrapper.rs  config.rs  file_manager.rs  lib.rs  logging.rs  main.rs  process_manager.rs
src/bitwarden/: agent.rs  client_wrapper.rs  mod.rs
tests/: agent_test.rs  cli_test.rs  config_test.rs  edge_cases_test.rs  integration_test.rs  logging_test.rs  process_manager_test.rs
