[package]
name = "rust-cli-boilerplate"
authors = ["Francesco Pira (pirafrank)"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pirafrank/rust-cli-boilerplate"
documentation = "https://github.com/pirafrank/rust-cli-boilerplate/blob/main/README.md"
description = "A template for binary CLI projects written in Rust"
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"
build = "build.rs"
homepage = "https://github.com/pirafrank/rust-cli-boilerplate"
#keywords = ["binary-manager", "portable-tools", "zero-config", "no-install", "userspace"]
#categories = ["command-line-utilities"]
exclude = [
    ".git",
    ".github",
    "hooks",
    ".idea",
    ".vscode",
    ".DS_Store",
    "*.iml",
    "*.swp",
    "*.swo",
    "*.tmp",
    "*.log",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
#dirs = "6.0"
#errno = "0.3"
#lazy_static = "1.5.0"
libc = "0.2"
log = "0.4.27"
env_logger = "0.11.8"
clap-verbosity-flag = "3.0.3"
anyhow = "1.0"

[dev-dependencies]
#tempfile = "3"
#serial_test = "3"
#predicates = "3.1.3"
#assert_cmd = "2.0.17"
#serde_json = "1.0"
#temp-env = "0.3"
#mockito = "1.7"

[build-dependencies]
build_cfg = "1.1.0"
chrono = "0.4"
glibc_version = "0.1.2"
