[package]
name = "vault-conductor"
authors = ["Francesco Pira (pirafrank)"]
version = "0.2.1"
edition = "2021"
repository = "https://github.com/pirafrank/vault-conductor"
documentation = "https://github.com/pirafrank/vault-conductor/blob/main/README.md"
description = "An SSH Agent to provide an SSH key stored in Bitwarden Secret Manager"
license = "MIT"
readme = "README.md"
rust-version = "1.85.0"
build = "build.rs"
homepage = "https://github.com/pirafrank/vault-conductor"
#keywords = ["binary-manager", "portable-tools", "zero-config", "no-install", "userspace"]
#categories = ["command-line-utilities"]
exclude = [
    ".git",
    ".github",
    "hooks",
    ".idea",
    ".vscode",
    ".DS_Store",
    "*.iml",
    "*.swp",
    "*.swo",
    "*.tmp",
    "*.log",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
#dirs = "6.0"
#errno = "0.3"
#lazy_static = "1.5.0"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
clap-verbosity-flag = "3.0"
anyhow = "1.0"
#bitwarden = { version = "1.0", features = ["secrets"] }
#bitwarden = { git = "https://github.com/bitwarden/sdk-sm.git", rev = "a3b57379ad4e18af175caebc7c4d82a24d4ea7f7", features = ["secrets"] }
bitwarden = { git = "https://github.com/bitwarden/sdk-sm.git", branch = "main", features = ["secrets"] }
uuid = { version = "1.19" }
ssh-agent-lib = "0.5"
ssh-key = { version = "0.6", features = ["std", "ed25519", "rsa"] }
#tokio = { version = "1.49", features = ["full"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "net", "signal"] }
async-trait = "0.1"
signature = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dirs = "6.0"

[dev-dependencies]
tempfile = "3"
#serial_test = "3"
#predicates = "3.1.3"
#assert_cmd = "2.0.17"
#serde_json = "1.0"
#temp-env = "0.3"
#mockito = "1.7"

[build-dependencies]
build_cfg = "1.1.0"
chrono = "0.4"
glibc_version = "0.1.2"
